# velaris-lead-gen-bot

./: .gitignore  Cargo.toml  README.md  run.bat  run.ps1
src/: config.rs  error.rs  main.rs  models.rs  persistence.rs
src/reporter/: mod.rs  pdf_gen.rs
src/scraper/: actions.rs  browser.rs  mod.rs
src/validator/: mod.rs  web_tester.rs
